# orbit_shell

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md
.cargo/: config.toml
module-libs/keys/: Cargo.toml
module-libs/keys/src/: lib.rs
modules/bar/: Cargo.toml
modules/bar/src/: lib.rs
modules/cliphistory/: Cargo.toml
modules/cliphistory/src/: lib.rs
modules/launcher/: Cargo.toml
modules/launcher/src/: config.rs  helpers.rs  lib.rs
modules/lockscreen/: Cargo.toml
modules/lockscreen/shaders/: blur_shader.wgsl
modules/lockscreen/src/: config.rs  lib.rs  pipeline.rs  widgets.rs
modules/wallpaper/: Cargo.toml
modules/wallpaper/src/: config.rs  helpers.rs  lib.rs
src/orbit-api/: Cargo.toml
src/orbit-api/src/: lib.rs  macros.rs  resource.rs  settings.rs
src/orbit-api/src/runtime/: erased.rs  mod.rs
src/orbit-common/: Cargo.toml
src/orbit-common/src/: config.rs  discovery.rs  lib.rs  loader.rs  watcher.rs  xdg.rs
src/orbit-dbus/: Cargo.toml
src/orbit-dbus/src/: lib.rs
src/orbit-macros/: Cargo.toml
src/orbit-macros/src/: lib.rs  plugin.rs
src/orbit/src/: main.rs
src/orbitd/: Cargo.toml
src/orbitd/src/: api_utils.rs  config.rs  dbus.rs  dialog.rs  dispatch.rs  event.rs  main.rs  module.rs  module_manager.rs  sctk.rs  settings.rs  subscriptions.rs  trace.rs
tools/orbit-cli/: Cargo.toml
tools/orbit-cli/src/: main.rs
tools/orbit-schema/: Cargo.toml
tools/orbit-schema/src/: main.rs
tools/xtask/src/: main.rs
xtask/src/: main.rs
