[workspace]
resolver = "3"
members = [
  "src/orbit-common",
  "src/orbit-macros",
  "src/orbit-api",
  "src/orbitd",
  "src/orbit-dbus",
  "tools/xtask",
  "tools/orbit-cli",
  "tools/orbit-schema",
  "modules/wallpaper",
  "modules/bar",
  "modules/launcher",
  "modules/lockscreen",
]

[workspace.dependencies]
ui = { git = "https://github.com/Magyx/ui_lib.git", rev = "751dfb24c8c13e54f0c262a70c512e015bf848fe" }
yaml_serde = "0.10.4"
serde_json = "1.0.149"
tracing = "0.1.44"
libloading = "0.8.9"
zbus = "5.14.0"

# [profile.release]
# codegen-units = 1
# lto = true
# strip = "symbols"
