[package]
name = "wallpaper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
orbit-api = { path = "../../src/orbit-api" }
serde = "1"
serde_yml = "0.0.12"
image = { version = "0.25.8", default-features = false, features = [
  "png",
  "jpeg",
] }
chrono = "0.4.42"
rand = "0.9.2"
xdg-user = "0.2.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
