[package]
name = "orbit-api"
version = "0.1.0"
edition = "2024"

[dependencies]
ui = { workspace = true, features = ["sctk"] }

orbit-macros = { path = "../orbit-macros" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1.2.1", features = ["derive"] }

tracing = { workspace = true }
