[package]
name = "orbitd"
version = "0.1.0"
edition = "2024"

[dependencies]
orbit-dbus = { path = "../../src/orbit-dbus" }
orbit-api = { path = "../orbit-api" }

serde_yml = { workspace = true }
notify = "8.2.0"
serde = "1.0.228"
xdg = "3.0.0"
libloading = "0.8.9"

zbus = { workspace = true }
futures-lite = "2.6.1"

ui = { workspace = true, features = ["sctk", "vulkan"] }

smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
calloop = { version = "0.14.3" }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-log = "0.2.0"
