[package]
name = "orbitd"
version = "0.1.0"
edition = "2024"

[dependencies]
orbit-dbus = { path = "../../src/orbit-dbus" }
orbit-api = { path = "../orbit-api" }
orbit-common = { path = "../orbit-common" }

yaml_serde = { workspace = true }

zbus = { workspace = true }
futures-lite = "2.6.1"

ui = { workspace = true, features = ["sctk", "vulkan"] }

smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
calloop = { version = "0.14.3" }

tracing = { workspace = true }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-log = "0.2.0"
