[package]
name = "orbit-schema"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "orbit-schema"
path = "src/main.rs"

[dependencies]
orbit-common = { path = "../../src/orbit-common/" }

axum = "0.8.9"
tokio = { version = "1.52.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
serde_json = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
clap = { version = "4.6.1", features = ["derive"] }
